--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +14,8 @@
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
