--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
