--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.ts",
+    "client": "cd .. && cd client && npm run start",
+    "start": "concurrently \"npm run dev\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "concurrently": "^7.6.0",
     "express": "^4.18.2"
   }
 }
