--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "nodemon index.ts",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
