--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts",
-    "client": "cd .. && cd client && npm run start",
-    "start": "concurrently \"npm run dev\" \"npm run client\""
+    "dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +16,6 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "concurrently": "^7.6.0",
     "express": "^4.18.2"
   }
 }
