--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-
+    "start": "tsc -w & nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
