--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -w & nodemon ./dist/index.js",
+    "start":"concurrently 'npm run tsc_watch' 'npm run disc_src'",
+    "tsc_watch": "tsc -w",
+    "disc_src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
