--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-
+    "start":"concurrently 'npm run tsc:watch' 'npm run disc:src'",
+    "tsc:watch": "tsc -w",
+    "disc:src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,8 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
