--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && npm run start",
-    "server": "cd server && npm run dev",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "main:client": "cd ./client && npm start",
+    "main:server": "cd ./server && npm start",
+    "start": "concurrently \"npm run main:server\" \"npm run main:client\""
   },
   "repository": {
     "type": "git",
