--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run start",
-    "server": "cd server && npm run dev",
+    "server": "cd server && npm run start",
     "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
