install prisma-session-store

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@quixo3/prisma-session-store": "^3.1.10",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
