--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start":"concurrently 'npm run tsc:watch' 'npm run disc:src'",
+    "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
     "tsc:watch": "tsc -w",
     "disc:src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,14 +14,18 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
-    "prisma": "^4.9.0",
-    "ts-node": "^10.9.1",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "@quixo3/prisma-session-store": "^3.1.10",
+    "@types/express-session": "^1.17.6",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "express": "^4.18.2"
   }
 }
