--- a/server/package.json
+++ b/server/package.json
@@ -12,20 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
-    "prisma": "^4.9.0",
+    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
     "@quixo3/prisma-session-store": "^3.1.10",
     "@types/express-session": "^1.17.6",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2"
   }
 }
