--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.10.1"
