--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start":"concurrently 'npm run tsc:watch' 'npm run disc:src'",
+    "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
     "tsc:watch": "tsc -w",
     "disc:src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,16 +12,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.6",
     "@types/node": "^18.11.18",
-    "prisma": "^4.9.0",
-    "ts-node": "^10.9.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0",
-    "express": "^4.18.2"
+    "@prisma/client": "^4.10.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "prisma": "^4.10.1"
   }
 }
