--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prisma": "^4.10.1"
   },
   "dependencies": {
-    "morgan": "^1.10.0"
+    "localhost": "^0.4.1",
+    "morgan": "^1.10.0",
+    "react-router-dom": "^6.9.0"
   }
 }
