--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "sass": "^1.60.0",
     "typescript": "^4.9.4"
   }
 }
