--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.10",
     "typescript": "^4.9.4"
   }
