--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.16",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.11.18",
