--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
+    "@types/crypto-js": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
