--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -12,7 +14,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -43,11 +47,14 @@
     ]
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.6.0",
     "@types/express": "^4.17.16",
     "@types/jest": "^27.5.2",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.0",
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-dom": "^18.2.1",
+    "@types/styled-components": "^5.1.26",
     "jwt-decode": "^3.1.2",
     "sass": "^1.60.0",
     "typescript": "^4.9.4"
