--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -47,16 +48,11 @@
   },
   "devDependencies": {
     "@chakra-ui/react": "^2.6.0",
-    "@types/crypto-js": "^4.1.1",
-    "@types/express": "^4.17.16",
     "@types/jest": "^27.5.2",
-    "@types/node": "^18.11.18",
     "@types/react": "^18.2.0",
     "@types/react-burger-menu": "^2.8.3",
-    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.2.1",
     "@types/styled-components": "^5.1.26",
-    "jwt-decode": "^3.1.2",
     "sass": "^1.60.0",
     "typescript": "^4.9.4"
   }
