--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,6 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.10.1",
-    "socket.io": "^4.6.2",
-    "stripe": "^12.9.0"
+    "socket.io": "^4.6.2"
   }
 }
