--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
