--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "@quixo3/prisma-session-store": "^3.1.11",
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
