--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "react-script start",
+    "build": "react-script build",
     "server": "node index.js",
     "start": "node index.js"
   },
