--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@types/morgan": "^1.9.4",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
-    "prisma": "^4.10.1"
+    "prisma": "^4.10.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
