--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,6 +9,8 @@ phases:
       - npm install
       - echo Installing client NPM dependencies...
       - npm run client-install
+      - echo Installing server NPM dependencies...
+      - npm run server-install
   pre_build:
     commands:
       - echo Prebuild step...
