--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "disc:src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
