--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "es5",
+    "module": "esnext",
     "moduleResolution": "node",
     "allowJs": true,
     "outDir": "./dist",
