--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/visually-hidden": "^2.0.15",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@fontsource/inter": "^5.0.1",
@@ -27,6 +29,7 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.2",
     "timeago.js": "^4.0.2",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,13 +58,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@chakra-ui/react": "^2.6.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.0",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.2.1",
     "@types/styled-components": "^5.1.26",
-    "sass": "^1.60.0",
-    "typescript": "^4.9.4"
+    "sass": "^1.60.0"
   }
 }
