--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@types/morgan": "^1.9.4",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
-    "prisma": "^4.10.1",
-    "typescript": "^5.1.6"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^5.0.0",
+    "typescript": "^5.1.6"
   }
 }
