--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
-    "typescript": "^4.9.4"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
@@ -39,6 +38,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.10.1",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "typescript": "^5.1.6"
   }
 }
