--- a/server/package.json
+++ b/server/package.json
@@ -19,21 +19,21 @@
     "@types/express-session": "^1.17.6",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.12",
-    "@types/passport-local": "^1.0.35",
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "@types/passport-local": "^1.0.35"
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "@quixo3/prisma-session-store": "^3.1.11",
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.10.1",
