--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "url": "https://github.com/crowdWrap/crowd-wrap/issues"
   },
   "homepage": "https://github.com/crowdWrap/crowd-wrap#readme",
-  "devDependencies": {
-    "@types/morgan": "^1.9.4"
-  },
   "dependencies": {
+    "@types/morgan": "^1.9.4",
     "concurrently": "^8.2.0",
     "dotenv": "^16.0.3",
     "morgan": "^1.10.0",
