--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
-    "tsc:watch": "tsc -w",
-    "disc:src": "nodemon ./dist/index.js",
+    "tsc:build": "tsc -b",
+    "disc:src": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
+    "node-typescript": "^0.1.3",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
