--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
-    "tsc:build": "tsc -b",
+    "tsc:watch": "tsc -w",
     "disc:src": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
