--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
     "tsc:watch": "tsc -w",
-    "disc:src": "node ./dist/index.js",
+    "disc:src": "nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
