--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
       nodejs: 14
     commands:
       - echo Installing source NPM dependencies...
-      - npm install
+      - npm install --force
       - echo Installing client NPM dependencies...
       - npm run client-install
       - echo Installing server NPM dependencies...
