--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
-    "tsc:watch": "tsc -w",
-    "disc:src": "nodemon ./dist/index.js",
+    "start": "node build/index.js",
+    "tsc:watch": "tsc",
+    "disc:src": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
