--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -23,3 +23,9 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+  artifacts:
+    files:
+      - package.json
+      - package-lock.json
+      - 'build/**/*'
+    discard-paths: yes
