add client build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client-install": "cd client && npm install --force",
     "server-install": "cd server && npm install --force",
     "client": "cd client && npm run start",
-    "build:server": "cd server && npx tsc && tsc",
+    "build:server": "cd server && npx tsc --project tsconfig.json",
+    "build:client":"cd client && npx tsc --project tsconfig.json",
     "build": "cd client && npm run build",
     "server": "cd server && npm run start",
     "start": "concurrently \"npm run server\" \"npm run client\""
