--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,4 +1,4 @@
-version: 0.2
+version: 1
 
 phases:
   install:
@@ -10,7 +10,7 @@ phases:
       - echo "-----------------------------"
       - npm install -g typescript
       - echo Installing source NPM dependencies...
-      - npm install --force
+      - npm ci
       - echo Installing client NPM dependencies...
       - npm run client-install
       - echo Installing server NPM dependencies...
@@ -18,13 +18,11 @@ phases:
       - echo Installing typescript
   build:
     commands:
+      - echo Build started on `date`
       - echo Transpiling TypeScript client code...
       - npm run build:client
       - echo Transpiling TypeScript server code...
       - npm run build:server
-      - echo Build started on `date`
-      - echo Building the client...
-      - npm run build
       - echo "Files in the current directory:$(pwd)"
       - ls -al
       - echo "-----------------------------"
@@ -33,9 +31,9 @@ phases:
       - echo Build completed on `date`
 
 artifacts:
+  baseDirectory: /
   files:
-    - package.json
-    - package-lock.json
-    - 'node_modules/**/*'
-    - 'build/**/*'
-  discard-paths: yes
+      - '**/*'
+cache:
+  paths:
+    - node_modules/**/*
