set individual artifacts

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -23,35 +23,39 @@ frontend:
     post_build:
       commands:
         - echo Build completed on `date`
+  artifacts:
+    baseDirectory: build
+    files:
+      - '**/*'
+
 backend:
   phases:
-      install:
-        runtime-versions:
-          nodejs: latest
-        commands:
-          - echo "Files in the current directory:$(pwd)"
-          - ls -al
-          - echo "-----------------------------"
-          - npm install -g typescript
-          - echo Installing source NPM dependencies...
-          - npm ci
-          - echo Installing server NPM dependencies...
-          - npm run server-install
-      build:
-        commands:
-          - echo Build started on `date`
-          - echo Transpiling TypeScript server code...
-          - npm run build:server
-          - echo "Files in the current directory:$(pwd)"
-          - ls -al
-          - echo "-----------------------------"
-      post_build:
-        commands:
-          - echo Build completed on `date`
-
-artifacts:
-  baseDirectory: /
-  files:
+    install:
+      runtime-versions:
+        nodejs: latest
+      commands:
+        - echo "Files in the current directory:$(pwd)"
+        - ls -al
+        - echo "-----------------------------"
+        - npm install -g typescript
+        - echo Installing source NPM dependencies...
+        - npm ci
+        - echo Installing server NPM dependencies...
+        - npm run server-install
+    build:
+      commands:
+        - echo Build started on `date`
+        - echo Transpiling TypeScript server code...
+        - npm run build:server
+        - echo "Files in the current directory:$(pwd)"
+        - ls -al
+        - echo "-----------------------------"
+    post_build:
+      commands:
+        - echo Build completed on `date`
+  artifacts:
+    baseDirectory: build
+    files:
       - '**/*'
 cache:
   paths:
