--- a/.amplify-build.yml
+++ b/.amplify-build.yml
@@ -30,3 +30,36 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+
+version: 1
+
+backend:
+  phases:
+    preBuild:
+      commands:
+        - echo "Files in the current directory:$(pwd)"
+        - ls -al
+        - echo "-----------------------------"
+        - npm install -g typescript
+        - echo Installing source NPM dependencies...
+        - npm ci
+        - echo Installing client NPM dependencies...
+        - npm run server-install
+    build:
+      commands:
+        - echo Build started on `date`
+        - echo Transpiling TypeScript client code...
+        - npm run build:server
+        - echo "Files in the current directory:$(pwd)"
+        - ls -al
+        - echo "-----------------------------"
+    post_build:
+      commands:
+        - echo Build completed on `date`
+  artifacts:
+    baseDirectory: "server/build"
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
