--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "bugs": {
     "url": "https://github.com/crowdWrap/crowd-wrap/issues"
   },
-  "homepage": "https://main.d24d1799szk92e.amplifyapp.com/",
+  "homepage": "https://github.com/crowdWrap/crowd-wrap#readme",
+  "devDependencies": {
+    "@types/morgan": "^1.9.4"
+  },
   "dependencies": {
-    "@types/morgan": "^1.9.4",
     "concurrently": "^8.2.0",
     "dotenv": "^16.0.3",
     "morgan": "^1.10.0",
