--- a/server/package.json
+++ b/server/package.json
@@ -11,18 +11,20 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.6",
+    "@types/node": "^18.11.18",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35"
+  },
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "@quixo3/prisma-session-store": "^3.1.11",
     "@sendgrid/mail": "^7.7.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/node": "^20.4.2",
-    "@types/passport": "^1.0.12",
-    "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
