--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,18 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "tsc:watch": "tsc",
-    "disc:src": "",
+    "start": "concurrently 'npm run tsc:watch' 'npm run disc:src'",
+    "tsc:watch": "tsc -w",
+    "disc:src": "nodemon ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^5.0.0",
     "@quixo3/prisma-session-store": "^3.1.11",
     "@sendgrid/mail": "^7.7.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
@@ -25,17 +24,16 @@
     "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "google-auth-library": "^8.7.0",
-    "node-typescript": "^0.1.3",
+    "google-auth-library": "^8.9.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "prisma": "^4.10.1",
+    "prisma": "^5.0.0",
     "socket.io": "^4.6.2",
     "typescript": "^5.1.6"
   }
