--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
     "@types/javascript-time-ago": "^2.0.3",
     "framer-motion": "^10.12.18",
     "javascript-time-ago": "^2.5.9",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
