--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm run start",
-    "server": "cd server/build && npm run start",
+    "client": "cd client && npm run start",
+    "server": "cd server && npm run start",
     "client-install": "cd client && npm ci",
     "server-install": "cd server && npm ci",
+    "install": "npm run client-install && npm run server-install",
     "build:client":"cd client && npx tsc --project tsconfig.json && npm run build",
     "build:server": "cd server && npx tsc --project tsconfig.json",
-    "start": "npm run server && npm run client"
+    "build": "npm run build:client && npm run build:server",
+    "serverAndClient": "concurrently  'npm run server' 'npm run client'",
+    "start": "cd server/prisma && npx prisma generate && cd ../.. &&  npm run serverAndClient "
   },
   "repository": {
     "type": "git",
