--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for crowdwrap",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./build/index.js",
     "tsc:watch": "tsc",
     "disc:src": "",
     "test": "echo \"Error: no test specified\" && exit 1"
