--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENTID=951239670358-q89e1msbgovmepbaq4fplqc20qn62ha9.apps.googleusercontent.com
 REACT_APP_PAYPAL_CLIENT_ID=AUd-Z5fFl9EX-sh5jDFJcEiIH7U9k1Hlfaqbeu2hA8PVyYwNaUZjD5OcyDlKOd5G5BHddSDf_cEFMI9D
+DANGEROUSLY_DISABLE_HOST_CHECK=true
