--- a/nginx.config
+++ b/nginx.config
@@ -1,4 +1,26 @@
 server {
+    listen 443 default_server;
+    listen [::]:443 default_server;
+    # We want the root folder to point at index.html
+    root /var/www/build;
+    index index.html index.htm index.nginx-debian.html;
+
+    server_name _;
+
+    location / {
+        # First attempt to serve request as file, then
+        # as directory, then fall back to displaying a 404.
+        try_files $uri /index.html $uri/ =404;
+    }
+
+    location /* {
+        proxy_pass http://localhost:8000;
+    }
+} 
+
+
+  GNU nano 5.8                                                                                          default                                                                                                    
+server {
     listen 80 default_server;
     listen [::]:80 default_server;
     # We want the root folder to point at index.html
@@ -16,4 +38,10 @@ server {
     location /* {
         proxy_pass http://localhost:8000;
     }
-} 
+} server {
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+    include ../snippets/self-signed.conf;
+}
+
+
